deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ressource-management-app-demo
  name: ressource-management-app-demo
  namespace: default
spec:
  replicas: 3
  minReadySeconds: 45
  selector:
    matchLabels:
      app: ressource-management-app-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ressource-management-app-demo
    spec:
      containers:
      - image: jbperidy/ressource-management-app-demo:latest
        imagePullPolicy: IfNotPresent
        name: ressource-management-app-demo
        ports:
        - name: liveness-port
          containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        readinessProbe: 
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ressource-management-app-demo
  name: ressource-management-app-demo
  namespace: default
spec:        
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ressource-management-app-demo
  sessionAffinity: None
  type: LoadBalancer #LoadBalancer or NodePort
