ingress.yaml
apiVersion: networking.k8s.io/v1beta1 #extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /devpdc-backend/*
        backend:
          serviceName: devpdc-backend
          servicePort: 5000          
      - path: /devpdc-frontend/*
        backend:
          serviceName: devpdc-frontend
          servicePort: 3000
